2009-03-25  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/memory.c: (start_board), (memory_next_level): fixed a cased in which
	  the memory sound was in a fuzzy state if the level was changed by the user.
	  Merged from trunk 3795

2009-03-24  Bruno coudoin  <bruno.coudoin@free.fr>

	- Replaced a level in memory sound to make the difficulty always increasing
	  Merged from trunk 3790

	* src/memory-activity/resources/memory/*.ogg: normalized
	* src/memory-activity/memory.c: (start_board), (memory_next_level),
	(hide_card), (check_win), (item_event), (tux_play),
	(sound_callback):

2009-03-17  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed a little issue. It was possible for the user in
	  memory sound against tux to click on as many card she wants
	  if she does not wait for the end of the sound.
	  merged from trunk 3782

	* src/boards/memory.c: (memory_next_level), (check_win),
	(item_event):

2009-03-15  Bruno coudoin  <bruno.coudoin@free.fr>

	- Replaced letter that differenciate blocks for
	  color blinds by ASCII symbols that are locale
	  agnostic.
	  Merged from trunk 3775

	* src/hanoi-activity/hanoi.c: (hanoi_create_item):

2009-03-14  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed an annoying bug in the locale selection.
	  Punjabi was twice in our internal list which makes
	  it impossible to access locale after Portuguese in
	  our list. It was possible to access locale by going
	  backward but really annoying.
	  Merged from trunk 3771

	* src/gcompris/config.c:

2009-02-20  Bruno coudoin  <bruno.coudoin@free.fr>

	- Merged 3727 from trunk
	- Should fix the empty date field in the log on Windows

	* src/gcompris/log.c: (gc_log_end):

2009-01-27  Bruno coudoin  <bruno.coudoin@free.fr>

	Reworked login to no more need button_large2.png. Removed
	this image as it is no more used.
	There is a bug in board_list.py, the login cannot be edited.

	* src/administration-activity/admin/board_list.py: